# rust-rule-202020

./: .gitignore  ABOUT.md  Cargo.toml  README.md  TODO.md
src/: 202020Rule.py
